crates/uselesskey-core-negative-der/tests/snapshots/snapshots_negative_der__negative_der_flip_oob.snap
---
source: crates/uselesskey-core-negative-der/tests/snapshots_negative_der.rs
expression: result
---
original_len: 8
flip_offset: 100
result_len: 8
bytes_changed: 0
