crates/uselesskey-core-negative-der/tests/snapshots/snapshots_negative_der__negative_der_truncate_beyond.snap
---
source: crates/uselesskey-core-negative-der/tests/snapshots_negative_der.rs
expression: result
---
original_len: 8
requested_len: 18
result_len: 8
was_shortened: false
